--- a/src/styles/_color.scss
+++ b/src/styles/_color.scss
@@ -20,6 +20,7 @@
 
 // .bg_gray1{background-color:$gray-100;}
 .bg_gray1_5{background-color:$gray-150;}
+.bg_gray2{background-color:$gray-200;}
 .bg_gray3{background-color:$gray-300;}
 .bg_gray4{background-color:$gray-400;}
 .bg_gray5{background-color:$gray-500;}
