--- a/src/component/UI/container/container.scss
+++ b/src/component/UI/container/container.scss
@@ -1,23 +1,75 @@
 @import '../../../styles/var';
-$container-max-widths: (
-  sm: 540px,
-  md: 720px,
-  lg: 960px,
-  xl: 1140px,
-  xxl: 1320px
+@mixin min($bp, $max: "null", $device: "screen") {
+  @if $max == "null" {
+    @media only #{$device} and (min-width: #{$bp}) {
+      @content;
+    }
+  } @else {
+    @media only #{$device} and (min-width: #{$bp}) and (max-width: #{$max}) {
+      @content;
+    }
+  }
+}
+
+@function bp($bp) {
+  @return map-get($breakpoints, $bp);
+}
+
+$breakpoints: (
+  na: 0px,
+  // For BS grid
+    xs: 320px,
+  // Smartphone
+    sm: 600px,
+  // Tablets
+    md: 900px,
+  // Tablets Landscape and small desktops
+    lg: 1200px,
+  // Desktops
+    xl: 1800px,
+  // Large Desktop
 );
-@mixin make-container($padding-x: $container-padding-x) {
-   width: 100%;
-   padding-right: $padding-x;
-   padding-left: $padding-x;
-   margin-right: auto;
-   margin-left: auto;
- }
- .container{
-    position: relative;
-    margin: 0;
+
+@function container($container-size, $true-val: false) {
+  @return map-get($container-sizes, $container-size);
+}
+
+$container-sizes: (
+  sm: map-get($breakpoints, sm) - 24px,
+  md: map-get($breakpoints, md) - 40px,
+  lg: map-get($breakpoints, lg) - 50px,
+  xl: map-get($breakpoints, xl) - 400px
+);
+
+.container {
+  padding-right: 3.625rem;
+  padding-left: 3.625rem;
+
+  &:not(.is-fluid) {
+    margin: 0 auto;
+
+    @each $bp, $container-size in $container-sizes {
+      @include min(#{bp(#{$bp})}) {
+        width: 100%;
+        max-width: container(#{$bp});
+      }
+    }
+  }
+}
+
+@each $bp, $container-size in $container-sizes {
+  .container-#{$bp} {
+    margin: 0 auto;
+    padding-right: 1rem;
+    padding-left: 1rem;
     width: 100%;
-    background: $gray-100;
-    padding: 2rem 6.75rem ;
-    box-sizing: border-box;
- }
+
+    $i: index($container-sizes, $bp $container-size);
+
+    @for $j from $i through length($container-sizes) {
+      @include min(#{bp(nth(nth($container-sizes, $j), 1))}) {
+        max-width: container(#{nth(nth($container-sizes, $j), 1)});
+      }
+    }
+  }
+}
