--- a/src/styles/_var.scss
+++ b/src/styles/_var.scss
@@ -8,7 +8,7 @@ $secondaryFont:'Barlow';
 $white:#fff ;
 $gray-100: #f8f8f8 ;
 $gray-150: rgba(0, 0, 0, 0.15);
-// $gray-200: #e9ecef ;
+$gray-200: #F6F6F6 ;
 $gray-300: #E0E0E0;
 $gray-400: #E3E3E3;
 $gray-500: rgba(0, 0, 0, 0.54);;
