--- a/src/component/pages/index.scss
+++ b/src/component/pages/index.scss
@@ -66,6 +66,9 @@
     box-sizing: border-box;
     margin-top: 1rem;
     background-repeat: no-repeat;
+    .media-iframe{border-radius: 0; z-index: 999;
+       margin-left: 0.5rem;
+      margin-top: 0.25rem;}
     .media_heading{
        font-size: 1.25rem;
        font-weight: 300;
@@ -84,6 +87,7 @@
          font-size: 3.75rem;
          color:$white;
          cursor: pointer;
+         z-index: 9;
       }
     .media_footer{
       background: $black-250;
