--- a/src/component/UI/grid/grid.module.scss
+++ b/src/component/UI/grid/grid.module.scss
@@ -4,8 +4,9 @@ $spacing:(
    'lg':1rem,
 );
 $breakpoints:(
-'sm':600px,
-'md':960px,
+'xs':600px,
+'sm':768px,
+'md':1100px,
 'lg':1280px,
 );
 $justifyContent:(
