--- a/src/component/pages/index.scss
+++ b/src/component/pages/index.scss
@@ -14,13 +14,15 @@
 //  }
 
 .leafHeading{
-   display: inline-block;
+   display: inline-flex;
    margin-left: 2rem;
-   .h3{margin-bottom: 3px;}
+   margin-bottom: 1.5rem;
+   .h3{margin-bottom: 0;}
+
    .subtittle{
              display: block;
              font-size: 0.875rem;
-             line-height: 1.0625rem;
+             line-height: 1.1875rem;
              font-family: $secondaryFont;
              font-weight: 400;
              color:$gray-800;
@@ -32,11 +34,10 @@
       margin-right: 2.625rem;
       .leaf{position: relative; top:-1.5rem;margin-right: 0.5rem;}
       .titleWrapper{display: inline-block;
-      .h3{margin-bottom: 3px;}
       .subtittle{
                 display: block;
                 font-size: 0.875rem;
-                line-height: 1.0625rem;
+                line-height: 1.1875rem;
                 font-family: $secondaryFont;
                 font-weight: 400;
                 color:$gray-800;
@@ -66,6 +67,7 @@
     box-sizing: border-box;
     margin-top: 1rem;
     background-repeat: no-repeat;
+    background-size: 100%;
     .media-iframe{border-radius: 0; z-index: 999;
        margin-left: 0.5rem;
       margin-top: 0.25rem;}
@@ -78,6 +80,9 @@
        display: inline-block;
        background: $black-250;
        padding: 2px;
+       @media  (min-width:800px) and (max-width:1024px) {
+         margin-left: 7rem; margin-top:2rem
+      }
     }
 
     .media_play{position: absolute;
@@ -85,7 +90,7 @@
          left:50%;
          transform: translate(-50%,-50%);
          font-size: 3.75rem;
-         color:$white;
+         color:$white2;
          cursor: pointer;
          z-index: 9;
       }
