--- a/src/styles/_var.scss
+++ b/src/styles/_var.scss
@@ -6,6 +6,7 @@ $secondaryFont:'Barlow';
 // Color system
 
 $white:#fff ;
+$white2:#fcfcfc;
 $gray-100: #f8f8f8 ;
 $gray-150: rgba(0, 0, 0, 0.15);
 $gray-200: #F6F6F6 ;
