--- a/src/component/UI/modal/modal.scss
+++ b/src/component/UI/modal/modal.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/var' ;
+@import '../../../styles/var';
 .modal-overlay {
     position: fixed;
     top: 0;
@@ -8,9 +8,8 @@
     height: 100vh;
     background-color: $black;
     opacity: .75;
-  }
-  
-  .modal-wrapper {
+}
+.modal-wrapper {
     position: fixed;
     top: 0;
     left: 0;
@@ -20,38 +19,48 @@
     overflow-x: hidden;
     overflow-y: auto;
     outline: 0;
-  }
-  
-  .modal {
-    z-index: 100;
-    background: transparent;
+    .modal {
+        z-index: 100;
+        background: transparent;
+        position: relative;
+        margin: 1.75rem auto;
+        border-radius: 3px;
+        max-width: 75%;
+        padding: 2rem;
+        padding-top: 0;
+        .modal-header {
+            display: flex;
+            justify-content: flex-end;
+        }
+        .modal-close-button {
+            font-size: 2rem;
+            width: 2rem;
+            height: 2rem;
+            font-weight: 300;
+            line-height: 1;
+            color: $black2;
+            cursor: pointer;
+            position: relative;
+            border: none;
+            border-radius: 1rem;
+            right: -1.5rem;
+            bottom: 0.5rem;
+        }
+    }
+}
+.video-container {
     position: relative;
-    margin: 1.75rem auto;
-    border-radius: 3px;
-    max-width: 75%;
-    padding: 2rem;
-    padding-top: 0;
-  }
-  
-  .modal-header {
-    display: flex;
-    justify-content: flex-end;
-  }
-  
-  .modal-close-button {
-    font-size: 2rem;
-    width:2rem;
-    height: 2rem;
-    font-weight: 300;
-    line-height: 1;
-    color: $black2;
-    cursor: pointer;
-    position: relative;
-    border: none;
-    border-radius: 1rem;
-    right: -1.5rem;
-    bottom: 0.5rem;
-  }
-  .video-container { position: relative; padding-bottom: 45.25%; padding-top: 30px; height: 0; overflow: hidden; }
-
-.video-container iframe, .video-container object, .video-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+    padding-bottom: 45.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+    iframe,
+    object,
+    embed {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+}
