--- a/src/component/pages/index.scss
+++ b/src/component/pages/index.scss
@@ -14,15 +14,14 @@
 //  }
 
 .leafHeading{
-   display: inline-flex;
+   display: inline-block;
    margin-left: 2rem;
-   margin-bottom: 1.5rem;
-   .h3{margin-bottom: 0;}
-
+   margin-bottom:1.5rem;
+   .h3{margin-bottom: 4px;}
    .subtittle{
              display: block;
              font-size: 0.875rem;
-             line-height: 1.1875rem;
+             line-height:1.1875rem;
              font-family: $secondaryFont;
              font-weight: 400;
              color:$gray-800;
@@ -32,18 +31,18 @@
  .tabHeading{
       display: inline-block;
       margin-right: 2.625rem;
+      margin-top: -4px;
       .leaf{position: relative; top:-1.5rem;margin-right: 0.5rem;}
       .titleWrapper{display: inline-block;
       .subtittle{
                 display: block;
                 font-size: 0.875rem;
-                line-height: 1.1875rem;
+                line-height: 1.0675rem;
                 font-family: $secondaryFont;
                 font-weight: 400;
                 color:$gray-800;
              }
       }
-
  }
  .tabFooter{
    margin-top: 1.5rem;
@@ -58,7 +57,6 @@
       .icon{font-size: 1.5rem;}
    }
  }
-
  .media{
     border-radius: 5.625rem 0;
     padding:1rem 1.5rem 1.5rem 1.5rem; 
